# graphnuts

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  test_patch.js
convex/: graphs.ts  schema.ts  users.ts
convex/_generated/: api.d.ts
examples/: flowchart_asv_follow_path.gn  robust_asv_approach.gn  simplified.gn  software_architecture.gn
public/wasm/: gn_engine.js  gn_engine.wasm
src/: auth.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/[id]/: page.tsx
src/app/api/graph/: route.ts
src/app/login/: page.tsx
src/app/profile/: page.tsx
src/components/: CodeEditor.tsx  Explorer.tsx  GraphCanvas.tsx  HelpModal.tsx  Providers.tsx  SplitPane.tsx  Toolbar.tsx
src/lib/: auto-layout.ts  dot-patcher.ts  file-io.ts  gn-wasm.ts  graphviz.ts
src/lib/gn-engine/: edge-router.ts  index.ts  layout.ts  parser.ts  renderer.ts  types.ts
wasm/: build.ps1  build.sh  gn_engine.cpp
